--- a/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
+++ b/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
@@ -61,7 +61,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Renderer\ExtendedDatePickerRenderer.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderer\NoUnderlineEntry.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
