--- a/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
+++ b/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
@@ -157,6 +157,15 @@
       <Name>ArticlesApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\FontAwesome5Regular.otf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\FontAwesome5Solid.otf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\FontAwesome5Brands.otf" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
