--- a/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
+++ b/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
@@ -168,6 +168,12 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="XamlCSS">
+      <Version>2.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="XamlCSS.XamarinForms">
+      <Version>2.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ArticlesApp\ArticlesApp.csproj">
