--- a/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
+++ b/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
@@ -149,6 +149,12 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="XamlCSS">
+      <Version>2.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="XamlCSS.XamarinForms">
+      <Version>2.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
