--- a/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
+++ b/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
@@ -127,7 +127,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SkiaSharp">
-      <Version>2.80.3</Version>
+      <Version>2.88.0-preview.179</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Licensing">
+      <Version>19.4.0.42</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.1</Version>
@@ -150,10 +153,10 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="XamlCSS">
-      <Version>2.2.0</Version>
+      <Version>2.2.1-pre2</Version>
     </PackageReference>
     <PackageReference Include="XamlCSS.XamarinForms">
-      <Version>2.2.0</Version>
+      <Version>2.2.1-pre2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
