--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -30,8 +30,10 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.179" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.42" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.43" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.43" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg" Version="2.4.11.982" />
