--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -33,7 +33,7 @@
     <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.47" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.47" />
     <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.47" />
-    <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.0" />
