--- a/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
+++ b/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
@@ -58,13 +58,13 @@
       <Version>2.88.0-preview.187</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>19.4.0.47</Version>
+      <Version>19.4.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>19.4.0.47</Version>
+      <Version>19.4.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfImageEditor">
-      <Version>19.4.0.47</Version>
+      <Version>19.4.0.48</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.1</Version>
@@ -95,6 +95,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
+    <PackageReference Include="Xamarin.Forms.PancakeView">
+      <Version>2.3.0.759</Version>
+    </PackageReference>
     <PackageReference Include="XamlCSS">
       <Version>2.2.1-pre2</Version>
     </PackageReference>
