--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -30,9 +30,9 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.187" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.47" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.48" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
@@ -44,6 +44,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
+    <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.759" />
     <PackageReference Include="XamlCSS" Version="2.2.1-pre2" />
     <PackageReference Include="XamlCSS.XamarinForms" Version="2.2.1-pre2" />
   </ItemGroup>
