--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -30,10 +30,10 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.187" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.48" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.48" />
-    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.48" />
-    <PackageReference Include="System.Text.Json" Version="6.0.1" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.50" />
+    <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.0" />
@@ -70,6 +70,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ForgotPasswordEnterEmail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\LoadingPopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\LogInPage.xaml">
