--- a/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
+++ b/ArticlesApp/ArticlesApp.iOS/ArticlesApp.iOS.csproj
@@ -130,13 +130,16 @@
       <Version>2.88.0-preview.187</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>19.4.0.50</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>19.4.0.50</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfImageEditor">
-      <Version>19.4.0.50</Version>
+      <Version>19.4.0.53</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor">
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.2</Version>
