--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -30,9 +30,10 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.187" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.50" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.50" />
-    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.50" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.53" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.53" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.53" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor" Version="19.4.0.53" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
