--- a/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
+++ b/ArticlesApp/ArticlesApp.UWP/ArticlesApp.UWP.csproj
@@ -148,16 +148,19 @@
       <Version>2.88.0-preview.187</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox">
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfImageEditor">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.2</Version>
