--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -32,10 +32,11 @@
 
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.187" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor" Version="19.4.0.54" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor" Version="19.4.0.55" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
@@ -58,6 +59,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Page1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\AddArticleDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\AddImage.xaml">
