--- a/ArticlesApp/ArticlesApp/ArticlesApp.csproj
+++ b/ArticlesApp/ArticlesApp/ArticlesApp.csproj
@@ -31,16 +31,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeSpire.PDF" Version="8.2.0" />
     <PackageReference Include="SkiaSharp" Version="2.88.0-preview.187" />
-    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.4.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.55" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="19.4.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.SfImageEditor" Version="19.4.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRichTextEditor" Version="19.4.0.56" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
-    <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
-    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.0" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1" />
+    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg" Version="2.4.11.982" />
