--- a/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
+++ b/ArticlesApp/ArticlesApp.Android/ArticlesApp.Android.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="NETStandard.Library">
       <Version>2.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Sharpnado.CollectionView">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp">
       <Version>2.88.0-preview.187</Version>
     </PackageReference>
